cabal-version:      2.4
name:                JuniorNative
version:             0.1.0.0
synopsis:            Minimalistic Native Compiler
-- description:
license:             Apache-2.0
license-file:        LICENSE
author:              edmondo@gmail.com
maintainer:          edmondo@gmail.com
-- copyright:
-- category:
build-type:          Simple
extra-source-files:  README.md

executable JuniorNative
  main-is:             Main.hs
  other-extensions:    DeriveFunctor, UndecidableInstances
  other-modules:       Ast,
                       BuiltIns,
                       Intrinsics,
                       Environment,
                       Fixpoint,
                       Infer,
                       InferMonad,
                       Lexer,
                       Monads,
                       Parser,
                       PrettyPrinter,
                       AlphaRename,
                       PrettyTypes,
                       RecursionSchemes,
                       Substitutions,
                       Types,
                       TypesPrinter,
                       Unification,
                       CoProduct,
                       Annotations,
                       FreeVariables,
                       LiftNumbers,
                       ContextReduction,
                       LiftNumbers, 
                       Operators, 
                       TypedAst,
                       PAst, 
                       Primitives, 
                       SynExpToExp,
                       TypesPrinter,
                       DagBindings,
                       Modules
  build-depends:       base,
                       array,
                       containers,
                       mtl,
                       transformers,
                       haskeline,
                       pretty,
                       parallel,
                       deepseq
  hs-source-dirs:      src
  build-tool-depends:  happy:happy, alex:alex
  default-language:    Haskell2010

executable JuniorService
  ghc-options:         -O2 -threaded -rtsopts -with-rtsopts=-N -Wall -fno-warn-orphans
  main-is:             Service.hs
  other-extensions:    DeriveFunctor, UndecidableInstances
  other-modules:       Ast,
                       BuiltIns,
                       Intrinsics,
                       Environment,
                       Fixpoint,
                       Infer,
                       InferMonad,
                       Lexer,
                       Monads,
                       Parser,
                       PrettyPrinter,
                       AlphaRename,
                       PrettyTypes,
                       RecursionSchemes,
                       Substitutions,
                       Types,
                       Unification,
                       CoProduct,
                       Annotations,
                       FreeVariables,
                       LiftNumbers,
                       ContextReduction,
                       LiftNumbers, 
                       Operators, 
                       TypedAst,
                       PAst, 
                       Primitives, 
                       SynExpToExp,
                       TypesPrinter,
                       DagBindings,
                       Modules
  build-depends:       base,
                       array,
                       containers,
                       mtl,
                       transformers,
                       pretty,
                       scotty,
                       text,
                       wai,
                       wai-extra,
                       wai-cors,
                       haskeline,
                       aeson,
                       unordered-containers,
                       bytestring,
                       parallel,
                       deepseq
  hs-source-dirs:      src
  build-tool-depends:  happy:happy, alex:alex
  default-language:    Haskell2010

test-suite tests
  ghc-options:         -Wall -fno-warn-orphans
  type:                exitcode-stdio-1.0
  main-is:             Tests.hs
  other-modules:       Ast,
                       BuiltIns,
                       Intrinsics,
                       Environment,
                       Fixpoint,
                       Infer,
                       InferMonad,
                       Lexer,
                       Monads,
                       Parser,
                       PrettyPrinter,
                       AlphaRename,
                       PrettyTypes,
                       RecursionSchemes,
                       Substitutions,
                       Types,
                       TypesPrinter,
                       Unification,
                       CoProduct,
                       Annotations,                   
                       FreeVariables,
                       LiftNumbers, 
                       ContextReduction,
                       Operators, 
                       TypedAst,
                       PAst, 
                       Primitives, 
                       SynExpToExp,
                       TypesPrinter,
                       DagBindings,
                       Modules,
                       AlphaRenameTests,
                       AnnotationsTests,
                       FreeVariablesTests,
                       TypeInferenceTests,
                       PrettyPrinterTests,
                       DagBindingsTests,
                       ModuleTypeInferenceTests

  hs-source-dirs:      tests, src
  build-tool-depends:  happy:happy, alex:alex
  build-depends:       base,
                       array,
                       containers,
                       mtl,
                       transformers,
                       pretty,
                       interpolate,
                       hspec-core,
                       hspec,
                       haskeline,
                       parallel,
                       deepseq
  default-language:    Haskell2010
