cabal-version:      2.4
name:                JuniorNative
version:             0.1.0.0
synopsis:            Minimalistic Native Compiler
-- description:
license:             Apache-2.0
license-file:        LICENSE
author:              edmondo@gmail.com
maintainer:          edmondo@gmail.com
-- copyright:
-- category:
build-type:          Simple
extra-source-files:  README.md

executable JuniorNative
  main-is:             Main.hs
  other-extensions:    DeriveFunctor, UndecidableInstances
  other-modules:       StringUtils,
                       Location,
                       Ast,
                       BuiltIns,
                       Intrinsics,
                       Environment,
                       Fixpoint,
                       Infer,
                       InferMonad,
                       Lexer,
                       Monads,
                       Parser,
                       PrettyPrinter,
                       PrettyPrinterUtils,
                       AlphaRename,
                       PrettyTypes,
                       RecursionSchemes,
                       Substitutions,
                       Types,
                       TypesPrinter,
                       Unification,
                       CoProduct,
                       Annotations,
                       FreeVariables,
                       LiftNumbers,
                       ContextReduction,
                       LiftNumbers, 
                       Operators, 
                       TypedAst,
                       PAst, 
                       Primitives, 
                       SynExpToExp,
                       TypesPrinter,
                       DependencyAnalysis,
                       ClosureConversion,
                       CompilerMonad,
                       CompilerSteps,
                       Compiler,
                       SymbolTable,
                       ModulePrinter,
                       Interpreter,
                       InterpreterMonad,
                       ConstraintsResolution,
                       MonomorphicRestriction,
                       InterpreterIntrinsics,
                       JavascriptGenerator,
                       ANFTranslation,
                       OptimizeTypeClasses,
                       DeadCodeElimination,
                       OptimizeClosureEnvs,
                       ParserUtils
  build-depends:       base,
                       array,
                       containers,
                       unordered-containers,
                       text,
                       mtl,
                       transformers,
                       haskeline,
                       mainland-pretty,
                       parallel,
                       deepseq,
                       timeit
  hs-source-dirs:      src, src/parser, src/compiler, src/typechecker, src/prettyprinter, src/utils, src/interpreter, src/javascript
  build-tool-depends:  happy:happy, alex:alex
  default-language:    Haskell2010

executable JuniorService
  ghc-options:         -O2 -threaded -rtsopts -with-rtsopts=-N -Wall -fno-warn-orphans
  -- -prof -fprof-auto 
  main-is:             Service.hs
  other-extensions:    DeriveFunctor, UndecidableInstances
  other-modules:       StringUtils,
                       Location,
                       Ast,
                       BuiltIns,
                       Intrinsics,
                       Environment,
                       Fixpoint,
                       Infer,
                       InferMonad,
                       Lexer,
                       Monads,
                       Parser,
                       ParserUtils,
                       PrettyPrinter,
                       PrettyPrinterUtils,
                       AlphaRename,
                       PrettyTypes,
                       RecursionSchemes,
                       Substitutions,
                       Types,
                       Unification,
                       CoProduct,
                       Annotations,
                       FreeVariables,
                       LiftNumbers,
                       ContextReduction,
                       LiftNumbers, 
                       Operators, 
                       TypedAst,
                       PAst, 
                       Primitives, 
                       SynExpToExp,
                       TypesPrinter,
                       DependencyAnalysis,
                       ClosureConversion,
                       CompilerMonad,
                       CompilerSteps,
                       Compiler,
                       SymbolTable,
                       ModulePrinter,
                       Interpreter,
                       InterpreterMonad,
                       ConstraintsResolution,
                       MonomorphicRestriction,
                       InterpreterIntrinsics,
                       JavascriptGenerator,
                       ANFTranslation,
                       OptimizeTypeClasses,
                       DeadCodeElimination,
                       OptimizeClosureEnvs,
                       ParserUtils
  build-depends:       base,
                       array,
                       containers,
                       unordered-containers,
                       mtl,
                       transformers,
                       mainland-pretty,
                       scotty,
                       text,
                       wai,
                       wai-extra,
                       wai-cors,
                       haskeline,
                       aeson,
                       unordered-containers,
                       bytestring,
                       parallel,
                       deepseq,
                       timeit
  hs-source-dirs:      src, src/parser, src/compiler, src/typechecker, src/prettyprinter, src/utils, src/interpreter, src/javascript
  build-tool-depends:  happy:happy, alex:alex
  default-language:    Haskell2010

test-suite spec
  ghc-options:         -Wall -fno-warn-orphans -threaded -rtsopts -with-rtsopts=-N
  type:                exitcode-stdio-1.0
  main-is:             Spec.hs
  other-modules:       StringUtils,
                       Location,
                       Ast,
                       BuiltIns,
                       Intrinsics,
                       Environment,
                       Fixpoint,
                       Infer,
                       InferMonad,
                       Lexer,
                       Monads,
                       Parser,
                       ParserUtils,
                       PrettyPrinter,
                       PrettyPrinterUtils,
                       AlphaRename,
                       PrettyTypes,
                       RecursionSchemes,
                       Substitutions,
                       Types,
                       TypesPrinter,
                       Unification,
                       CoProduct,
                       Annotations,                   
                       FreeVariables,
                       LiftNumbers, 
                       ContextReduction,
                       Operators, 
                       TypedAst,
                       PAst, 
                       Primitives, 
                       SynExpToExp,
                       TypesPrinter,
                       DependencyAnalysis,
                       ClosureConversion,
                       CompilerMonad,
                       CompilerSteps,
                       Compiler,
                       SymbolTable,
                       ModulePrinter,
                       Interpreter,
                       InterpreterMonad,
                       ConstraintsResolution,
                       MonomorphicRestriction,
                       InterpreterIntrinsics,
                       JavascriptGenerator,
                       JavaScriptRunner,
                       ANFTranslation,
                       OptimizeTypeClasses,
                       DeadCodeElimination,
                       OptimizeClosureEnvs,
                       ParserUtils,
                       AlphaRenameSpec,
                       AnnotationsSpec,
                       FreeVariablesSpec,
                       TypeInferenceSpec,
                       PrettyPrinterSpec,
                       DependencyAnalysisSpec,
                       ModuleTypeInferenceSpec,
                       SymbolTableSpec,
                       PrettyTypesSpec,
                       ModulePrinterSpec,
                       InterpreterSpec,
                       ConstraintsResolutionSpec,
                       CompilerSpec,
                       MandelbrotSpec,
                       CompileToJsSpec,
                       JavaScriptRunnerSpec,
                       ClosureConversionSpec,
                       CompileToClosedJsSpec,
                       CompileToCloseANFdJsSpec,
                       OptimizeTypeClassesSpec,
                       DeadCodeEliminationSpec,
                       OptimizeClosureEnvsSpec,
                       ParserSpec

  hs-source-dirs:      tests, src, src/parser, src/compiler, src/typechecker, src/prettyprinter, src/utils, src/interpreter, src/javascript
  build-tool-depends:  happy:happy, alex:alex, hspec-discover:hspec-discover 
  build-depends:       base,
                       array,
                       containers,
                       unordered-containers,
                       text,
                       mtl,
                       transformers,
                       mainland-pretty,
                       interpolate,
                       hspec-core,
                       hspec,
                       haskeline,
                       parallel,
                       deepseq,
                       timeit,
                       process,
                       directory
  default-language:    Haskell2010
