cabal-version:      2.4
name:                JuniorNative
version:             0.1.0.0
synopsis:            Minimalistic Native Compiler
-- description:
license:             Apache-2.0
license-file:        LICENSE
author:              edmondo@gmail.com
maintainer:          edmondo@gmail.com
-- copyright:
-- category:
build-type:          Simple
extra-source-files:  README.md

executable JuniorNative
  main-is:             Main.hs
  other-extensions:    DeriveFunctor, UndecidableInstances
  other-modules:       Junior.Utils.StringUtils,
                       Junior.Parser.Location,
                       Junior.Core.Ast,
                       Junior.Core.BuiltIns,
                       Junior.Compiler.Intrinsics,
                       Junior.TypeChecker.Environment,
                       Junior.Utils.Fixpoint,
                       Junior.TypeChecker.Infer,
                       Junior.TypeChecker.InferMonad,
                       Junior.Parser.Lexer,
                       Junior.TypeChecker.Monads,
                       Junior.Parser.Parser,
                       Junior.Pretty.Printer,
                       Junior.Pretty.Utils,
                       Junior.Compiler.AlphaRename,
                       Junior.Pretty.PrettyTypes,
                       Junior.Utils.RecursionSchemes,
                       Junior.TypeChecker.Substitutions,
                       Junior.Core.Types,
                       Junior.Pretty.TypesPrinter,
                       Junior.TypeChecker.Unification,
                       Junior.Utils.CoProduct,
                       Junior.Utils.Annotations,
                       Junior.Compiler.FreeVariables,
                       Junior.Compiler.LiftNumbers,
                       Junior.TypeChecker.ContextReduction,
                       Junior.Core.Operators, 
                       Junior.TypeChecker.TypedAst,
                       Junior.Parser.PAst, 
                       Junior.Parser.Primitives, 
                       Junior.Parser.SynExpToExp,
                       Junior.Parser.SynExpToTypeDecl,
                       Junior.Pretty.TypesPrinter,
                       Junior.Compiler.DependencyAnalysis,
                       Junior.Compiler.ClosureConversion,
                       Junior.Compiler.CompilerMonad,
                       Junior.Compiler.CompilerSteps,
                       Junior.Compiler.Compiler,
                       Junior.Compiler.SymbolTable,
                       Junior.Pretty.ModulePrinter,
                       Junior.Interpreter.Interpreter,
                       Junior.Interpreter.InterpreterMonad,
                       Junior.TypeChecker.ConstraintsResolution,
                       Junior.Compiler.MonomorphicRestriction,
                       Junior.Interpreter.InterpreterIntrinsics,
                       Junior.JavaScript.JavascriptGenerator,
                       Junior.JavaScript.DeriveJs,
                       Junior.Compiler.ANFTranslation,
                       Junior.Compiler.OptimizeTypeClasses,
                       Junior.Compiler.DeadCodeElimination,
                       Junior.Compiler.OptimizeClosureEnvs,
                       Junior.Compiler.DesugarPatternMatching,
                       Junior.Compiler.DesugarQuotation,
                       Junior.Compiler.CompilePatternMatching,
                       Junior.Parser.Utils,
                       Junior.Compiler.Junior
  build-depends:       base,
                       array,
                       containers,
                       unordered-containers,
                       text,
                       mtl,
                       interpolate,
                       transformers,
                       haskeline,
                       mainland-pretty,
                       parallel,
                       deepseq,
                       timeit,
                       filepath
  hs-source-dirs:      src
  build-tool-depends:  happy:happy, alex:alex
  default-language:    Haskell2010

executable JuniorService
  ghc-options:         -O2 -threaded -rtsopts -with-rtsopts=-N -Wall -fno-warn-orphans
  -- -prof -fprof-auto 
  main-is:             Service.hs
  other-extensions:    DeriveFunctor, UndecidableInstances
  other-modules:       Junior.Utils.StringUtils,
                       Junior.Parser.Location,
                       Junior.Core.Ast,
                       Junior.Core.BuiltIns,
                       Junior.Compiler.Intrinsics,
                       Junior.TypeChecker.Environment,
                       Junior.Utils.Fixpoint,
                       Junior.TypeChecker.Infer,
                       Junior.TypeChecker.InferMonad,
                       Junior.Parser.Lexer,
                       Junior.TypeChecker.Monads,
                       Junior.Parser.Parser,
                       Junior.Pretty.Printer,
                       Junior.Pretty.Utils,
                       Junior.Compiler.AlphaRename,
                       Junior.Pretty.PrettyTypes,
                       Junior.Utils.RecursionSchemes,
                       Junior.TypeChecker.Substitutions,
                       Junior.Core.Types,
                       Junior.Pretty.TypesPrinter,
                       Junior.TypeChecker.Unification,
                       Junior.Utils.CoProduct,
                       Junior.Utils.Annotations,
                       Junior.Compiler.FreeVariables,
                       Junior.Compiler.LiftNumbers,
                       Junior.TypeChecker.ContextReduction,
                       Junior.Core.Operators, 
                       Junior.TypeChecker.TypedAst,
                       Junior.Parser.PAst, 
                       Junior.Parser.Primitives, 
                       Junior.Parser.SynExpToExp,
                       Junior.Parser.SynExpToTypeDecl,
                       Junior.Pretty.TypesPrinter,
                       Junior.Compiler.DependencyAnalysis,
                       Junior.Compiler.ClosureConversion,
                       Junior.Compiler.CompilerMonad,
                       Junior.Compiler.CompilerSteps,
                       Junior.Compiler.Compiler,
                       Junior.Compiler.SymbolTable,
                       Junior.Pretty.ModulePrinter,
                       Junior.Interpreter.Interpreter,
                       Junior.Interpreter.InterpreterMonad,
                       Junior.TypeChecker.ConstraintsResolution,
                       Junior.Compiler.MonomorphicRestriction,
                       Junior.Interpreter.InterpreterIntrinsics,
                       Junior.JavaScript.JavascriptGenerator,
                       Junior.JavaScript.DeriveJs,
                       Junior.Compiler.ANFTranslation,
                       Junior.Compiler.OptimizeTypeClasses,
                       Junior.Compiler.DeadCodeElimination,
                       Junior.Compiler.OptimizeClosureEnvs,
                       Junior.Compiler.DesugarPatternMatching,
                       Junior.Compiler.DesugarQuotation,
                       Junior.Compiler.CompilePatternMatching,
                       Junior.Parser.Utils,
                       Junior.Compiler.Junior
  build-depends:       base,
                       array,
                       containers,
                       unordered-containers,
                       mtl,
                       interpolate,
                       transformers,
                       mainland-pretty,
                       scotty,
                       text,
                       wai,
                       wai-extra,
                       wai-cors,
                       haskeline,
                       aeson,
                       unordered-containers,
                       bytestring,
                       parallel,
                       deepseq,
                       timeit,
                       filepath
  hs-source-dirs:      src
  build-tool-depends:  happy:happy, alex:alex
  default-language:    Haskell2010

executable TestSuite
  ghc-options:         -Wall -fno-warn-orphans -threaded -rtsopts -with-rtsopts=-N
  main-is:             Main.hs
  other-modules:       Junior.Utils.StringUtils,
                       Junior.Parser.Location,
                       Junior.Core.Ast,
                       Junior.Core.BuiltIns,
                       Junior.Compiler.Intrinsics,
                       Junior.TypeChecker.Environment,
                       Junior.Utils.Fixpoint,
                       Junior.TypeChecker.Infer,
                       Junior.TypeChecker.InferMonad,
                       Junior.Parser.Lexer,
                       Junior.TypeChecker.Monads,
                       Junior.Parser.Parser,
                       Junior.Pretty.Printer,
                       Junior.Pretty.Utils,
                       Junior.Compiler.AlphaRename,
                       Junior.Pretty.PrettyTypes,
                       Junior.Utils.RecursionSchemes,
                       Junior.TypeChecker.Substitutions,
                       Junior.Core.Types,
                       Junior.Pretty.TypesPrinter,
                       Junior.TypeChecker.Unification,
                       Junior.Utils.CoProduct,
                       Junior.Utils.Annotations,
                       Junior.Compiler.FreeVariables,
                       Junior.Compiler.LiftNumbers,
                       Junior.TypeChecker.ContextReduction,
                       Junior.Core.Operators, 
                       Junior.TypeChecker.TypedAst,
                       Junior.Parser.PAst, 
                       Junior.Parser.Primitives, 
                       Junior.Parser.SynExpToExp,
                       Junior.Parser.SynExpToTypeDecl,
                       Junior.Pretty.TypesPrinter,
                       Junior.Compiler.DependencyAnalysis,
                       Junior.Compiler.ClosureConversion,
                       Junior.Compiler.CompilerMonad,
                       Junior.Compiler.CompilerSteps,
                       Junior.Compiler.Compiler,
                       Junior.Compiler.SymbolTable,
                       Junior.Pretty.ModulePrinter,
                       Junior.Interpreter.Interpreter,
                       Junior.Interpreter.InterpreterMonad,
                       Junior.TypeChecker.ConstraintsResolution,
                       Junior.Compiler.MonomorphicRestriction,
                       Junior.Interpreter.InterpreterIntrinsics,
                       Junior.JavaScript.JavascriptGenerator,
                       Junior.JavaScript.JavaScriptRunner,
                       Junior.JavaScript.DeriveJs,
                       Junior.Compiler.ANFTranslation,
                       Junior.Compiler.OptimizeTypeClasses,
                       Junior.Compiler.DeadCodeElimination,
                       Junior.Compiler.OptimizeClosureEnvs,
                       Junior.Compiler.DesugarPatternMatching,
                       Junior.Compiler.DesugarQuotation,
                       Junior.Compiler.CompilePatternMatching,
                       Junior.Parser.Utils,
                       Junior.Compiler.Junior,
                       UnitTests,
                       UnitTests.AlphaRenameSpec,
                       UnitTests.AnnotationsSpec,
                       UnitTests.FreeVariablesSpec,
                       UnitTests.TypeInferenceSpec,
                       UnitTests.PrettyPrinterSpec,
                       UnitTests.DependencyAnalysisSpec,
                       UnitTests.ModuleTypeInferenceSpec,
                       UnitTests.SymbolTableSpec,
                       UnitTests.PrettyTypesSpec,
                       UnitTests.ModulePrinterSpec,
                       UnitTests.InterpreterSpec,
                       UnitTests.ConstraintsResolutionSpec,
                       UnitTests.CompilerInterpSpec,
                       UnitTests.MandelbrotSpec,
                       UnitTests.CompileToJsSpec,
                       UnitTests.JavaScriptRunnerSpec,
                       UnitTests.ClosureConversionSpec,
                       UnitTests.CompileToCloseANFdJsSpec,
                       UnitTests.OptimizeTypeClassesSpec,
                       UnitTests.DeadCodeEliminationSpec,
                       UnitTests.OptimizeClosureEnvsSpec,
                       UnitTests.ParserSpec,
                       UnitTests.MultiScriptCompileSpec,
                       UnitTests.PreludeSpec,
                       UnitTests.DesugarPatternMatchingSpec,
                       UnitTests.CompilePatternMatchingSpec

  hs-source-dirs:      tests, src
  build-tool-depends:  happy:happy, alex:alex, sandwich:sandwich-discover
  build-depends:       base,
                       array,
                       containers,
                       unordered-containers,
                       text,
                       mtl,
                       transformers,
                       mainland-pretty,
                       interpolate,
                       -- patch due to a bug in 1.0 
                       brick < 1.0, 
                       sandwich,
                       time,
                       exceptions,
                       haskeline,
                       parallel,
                       deepseq,
                       timeit,
                       process,
                       directory,
                       filepath
  default-language:    Haskell2010
